--- a/meu-primeiro-pipeline/.gitlab-ci.yml
+++ b/meu-primeiro-pipeline/.gitlab-ci.yml
@@ -3,25 +3,42 @@ stages:
   - test
   - deploy
 
-image: alpine:3.8
+image: alpine
 
 build_a:
   stage: build
+  needs: [test_a]
   script:
-    - echo "Ola Mundo"
+    - echo "This job builds something quickly."
 
 build_b:
   stage: build
   script:
-    - echo "Segundo build ${USER_DB}"
+    - echo "This job builds something else slowly."
 
 test_a:
   stage: test
+  needs: [build_a]
   script:
-    - echo "Ola Mundo no teste"
+    - echo "This test job will start as soon as build_a finishes."
+    - echo "It will not wait for build_b, or other jobs in the build stage, to finish."
+
+test_b:
+  stage: test
+  needs: [build_b]
+  script:
+    - echo "This test job will start as soon as build_b finishes."
+    - echo "It will not wait for other jobs in the build stage to finish."
 
 deploy_a:
   stage: deploy
+  needs: [test_a]
   script:
-    - echo "Estou aqui"
-    - echo "Agora aqui"
+    - echo "Since build_a and test_a run quickly, this deploy job can run much earlier."
+    - echo "It does not need to wait for build_b or test_b."
+
+deploy_b:
+  stage: deploy
+  needs: [test_b]
+  script:
+    - echo "Since build_b and test_b run slowly, this deploy job will run much later."
